<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chkUm"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"/>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/imgUm"
            android:src="@drawable/img"
            android:layout_toRightOf="@id/chkUm"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lanche_01"
            android:id="@+id/txtUm"
            android:layout_toRightOf="@id/imgUm"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="30"
            android:id="@+id/txtValorUm"
            android:layout_toRightOf="@id/txtUm"
            android:layout_marginTop="40dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ver"
            android:id="@+id/btnUm"
            android:layout_toRightOf="@id/txtUm"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:onClick="verLancheUm"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chkDois"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"/>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/imgDois"
            android:src="@drawable/img"
            android:layout_toRightOf="@id/chkDois"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lanche_02"
            android:id="@+id/txtDois"
            android:layout_toRightOf="@id/imgDois"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="30"
            android:id="@+id/txtValorDois"
            android:layout_toRightOf="@id/txtDois"
            android:layout_marginTop="40dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ver"
            android:id="@+id/btnDois"
            android:layout_toRightOf="@id/txtDois"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:onClick="verLancheDois"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chkTres"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"/>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/imgTres"
            android:src="@drawable/img"
            android:layout_toRightOf="@id/chkTres"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lanche_03"
            android:id="@+id/txtTres"
            android:layout_toRightOf="@id/imgTres"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="30"
            android:id="@+id/txtValorTres"
            android:layout_toRightOf="@id/txtTres"
            android:layout_marginTop="40dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ver"
            android:id="@+id/btnTres"
            android:layout_toRightOf="@id/txtTres"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:onClick="verLancheTres"/>

    </RelativeLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comprar"
        android:onClick="comprar"/>

</LinearLayout>